--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,8 @@
   border-top:none; border-left:none; border-right:none; border-bottom: 1px solid grey;
   background: none;
   outline: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .formContainer > form > input[type="submit"]{
@@ -61,8 +63,9 @@
     border-radius: 30px 30px 0px 0px;
     border-right: 1px solid #D5DAEA;
     outline: 0;
-    transition: background 300ms ease-in-out, 
-                transform 150ms ease;
+    transition: background 300ms ease-in-out, transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 .ActiveTab {
@@ -80,8 +83,9 @@
     border-bottom: 1px solid #D5DAEA;
     border-right: 1px solid #D5DAEA;
     outline: 0;
-    transition: background 250ms ease-in-out, 
-                transform 150ms ease;
+    transition: background 250ms ease-in-out, transform 150ms ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
     
 .listContainer {
