--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@
   outline: 0;
   -webkit-appearance: none;
   -moz-appearance: none;
+  cursor: text;
 }
 
 .formContainer > form > input[type="submit"]{
@@ -54,7 +55,10 @@
     font-size: 25px;
     font-family: "Open Sans", sans-serif;
     border: none;
-    padding: 30px 118.75px 30px 118.75px;
+    /* padding: 30px 118.75px 30px 118.75px; */
+    /* padding: 1% 0.5% 1% 0.5%; */
+    width: 300px;
+    height: 100px;
     margin-bottom: -1px;
     text-decoration: none;
     background: #E9EBF8;
@@ -70,19 +74,18 @@
 }
 
 .ActiveTab {
+    width: 300px;
+    height: 100px;
     font-size: 25px;
     font-family: "Open Sans", sans-serif;
-    border: none;
-    padding: 30px 118.75px 30px 118.75px;
+    color: #957FEF;
+    text-align: center;
+    border: none;    
     margin-bottom: -1px;
     text-decoration: none;
-    background: #FFFFFF;
-    color: #957FEF;
-    cursor: pointer;
-    text-align: center;
+    background: #FFFFFF;    
+    cursor: pointer;    
     border-radius: 30px 30px 0px 0px;
-    border-bottom: 1px solid #D5DAEA;
-    border-right: 1px solid #D5DAEA;
     outline: 0;
     transition: background 250ms ease-in-out, transform 150ms ease;
     -webkit-appearance: none;
@@ -110,14 +113,15 @@
   flex: none;
   width: 35px;
   height: 35px;
-  margin-right: 30px;
-  -webkit-appearance: none;
+  margin-right: 30px;  
 	background-color: #fafafa;
 	border: 2px solid #cacece;
 	padding: 9px;
 	border-radius: 50%;
   outline: 0;
   cursor: pointer;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 .taskContainer input:checked{
