--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,25 @@
 .bodyDiv>div>div:nth-child(2){
     margin-top: 30px;
 }
+
+.board{
+    /* position: relative; */
+    width: 300px;
+    background-color: #888888;
+    margin-top: 60px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.cell{
+    /* position: absolute; */
+    flex: none;
+    width: 96px;
+    line-height: 101px;
+    text-align: center;
+    background-color: #ffffff;
+    border: 1px solid #888888;
+    z-index: 2;
+    cursor: pointer;
+}
